qtbase-opensource-src (5.11.1+dfsg-2) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * Fix version of qttools5-dev-tools build-dependency.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 20 Jun 2018 19:40:04 +0300

qtbase-opensource-src (5.11.1+dfsg-1) experimental; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Change references to alioth/git.debian.org to salsa.debian.org.

  [ Dmitry Shachnev ]
  * Configure with triplet-prefixed version of pkg-config (closes: #899382).

  [ Simon Quigley ]
  * New upstream release.
  * Bump build dependencies to 5.11.1.
  * Add new file to debian/qtbase5-dev.install.
  * Update symbols from build logs.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Tue, 19 Jun 2018 14:29:27 -0500

qtbase-opensource-src (5.11.0+dfsg-1) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * debian/copyright: Update for changed/removed files in 5.11.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Bump Build-Depends-Indep's Qt dependencies.

  [ Simon Quigley ]
  * Update symbols from buildd logs.
  * New upstream release.
  * Bump build dependencies to 5.11.0.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Tue, 22 May 2018 18:19:48 -0500

qtbase-opensource-src (5.11.0~rc1+dfsg-1) experimental; urgency=medium

  * New upstream release candidate.
  * Refresh patches for the new upstream release, and remove
    reverse-applicable ones:
    - dead_key_symbols.diff
    - extend_mariadb_define_check.diff
    - fix_loading_opengl.diff
    - mesa_18.diff
    - resources_for_examples.diff
  * Update install files for new upstream files.
    - Add new binary package qt5-flatpak-platformtheme.
  * Bump debhelper compat to 11, no changes needed.
  * Add my name to the copyright for the Debian packaging.
  * Update copyright using debian/scripts/update-copyright.
  * Update symbols from amd64 build logs.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Tue, 15 May 2018 23:08:16 -0500
