@@ -3,6 +3,10 @@ qtbase-opensource-src (5.11.1+dfsg-2) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * Fix version of qttools5-dev-tools build-dependency.
 
+  [ Simon Quigley ]
+  * Remove the dbgsym migration section of debian/rules; it isn't needed
+    anymore.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 20 Jun 2018 19:40:04 +0300
 
 qtbase-opensource-src (5.11.1+dfsg-1) experimental; urgency=medium
